--- a/Harden System Security/Pages/IntuneDeploymentDetails.xaml
+++ b/Harden System Security/Pages/IntuneDeploymentDetails.xaml
@@ -152,12 +152,14 @@
                     <Button x:Uid="ExportToJSONButton"
                             IsEnabled="{x:Bind ViewModel.AreElementsEnabled, Mode=OneWay}"
                             Click="{x:Bind ViewModel.ExportToJsonButton_Click}">
-                        <Button.Content>
-                            <StackPanel Orientation="Horizontal" Spacing="5">
-                                <FontIcon Glyph="&#xE96A;" />
-                                <TextBlock x:Uid="ExportToJSONButtonText" />
-                            </StackPanel>
-                        </Button.Content>
+                        <Button.ContentTemplate>
+                            <DataTemplate x:DataType="x:String">
+                                <StackPanel Orientation="Horizontal" Spacing="8">
+                                    <FontIcon Glyph="&#xE74E;" FontSize="16"/>
+                                    <TextBlock Text="{x:Bind}"/>
+                                </StackPanel>
+                            </DataTemplate>
+                        </Button.ContentTemplate>
                     </Button>
 
                 </controls:WrapPanel>
