Implemented Windows Firewall rules management
- Added a progress ring to **Microsoft Defender -> Exclusions**.

The [Windows Firewall](https://github.com/HotCakeX/Harden-Windows-Security/wiki/Windows-Firewall) page now includes a new **Management** section. From there, you can:

- Browse for individual files to allow or block through Windows Firewall, controlling whether they can make network connections.
- Browse for folders to allow or block all executable files within them, including executables in all subfolders.
- List all of the Firewall rule created by the Harden System Security app.
- Delete any Firewall rules created by the Harden System Security app.

You can now block network access through Windows Firewall for high-risk dual-use binaries to reduce abuse for malicious downloads or data exfiltration. This implements the requested feature in [#706](https://github.com/HotCakeX/Harden-Windows-Security/issues/706). The full list of these programs is available in the [Windows Firewall page in the wiki](https://github.com/HotCakeX/Harden-Windows-Security/wiki/Windows-Firewall).

--- a/Harden System Security/Pages/Protects/MicrosoftDefender.xaml
+++ b/Harden System Security/Pages/Protects/MicrosoftDefender.xaml
@@ -76,9 +76,13 @@
                                      HorizontalSpacing="10"
                                      VerticalSpacing="10">
 
+                                <ProgressRing Visibility="{x:Bind ViewModel.ExclusionProgressVisibility, Mode=OneWay}"
+                                               VerticalAlignment="Center"
+                                               IsIndeterminate="True" />
+
                                 <DropDownButton x:Uid="AddExclusionsButton"
                                         VerticalAlignment="Center"
-                                        IsEnabled="{x:Bind ViewModel.ExclusionsUIIsEnabled}">
+                                        IsEnabled="{x:Bind ViewModel.ExclusionsUIIsEnabled, Mode=OneWay}">
                                     <DropDownButton.ContentTemplate>
                                         <DataTemplate x:DataType="x:String">
                                             <StackPanel Orientation="Horizontal" Spacing="8">
@@ -108,7 +112,7 @@
                                 </DropDownButton>
 
                                 <Button x:Uid="RetrieveAllExclusionsButton"
-                                        IsEnabled="{x:Bind ViewModel.ExclusionsUIIsEnabled}"
+                                        IsEnabled="{x:Bind ViewModel.ExclusionsUIIsEnabled, Mode=OneWay}"
                                         Click="{x:Bind ViewModel.RetrieveAllExclusions}"
                                         VerticalAlignment="Center">
                                     <Button.ContentTemplate>
@@ -123,7 +127,7 @@
 
                                 <Button x:Uid="ClearDataButton"
                                         VerticalAlignment="Center"
-                                        IsEnabled="{x:Bind ViewModel.ExclusionsUIIsEnabled}"
+                                        IsEnabled="{x:Bind ViewModel.ExclusionsUIIsEnabled, Mode=OneWay}"
                                         Click="{x:Bind ViewModel.ClearExclusionsList}">
                                     <Button.ContentTemplate>
                                         <DataTemplate x:DataType="x:String">
